--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Cocktails</h1>
 
+<%= link_to "Add a Cocktail", new_cocktail_path %>
+
 <% @cocktails.each do |cocktail| %>
   <h4><%= cocktail.name %> <%= link_to "open", cocktail_path(cocktail) %> </h4>
 <% end %>
