--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -1,6 +1,5 @@
-
-
-<%= simple_form_for @cocktail @dose do |f| %>
-<%= f.input :description, placeholder: "how many?" %>
+<%= simple_form_for [@cocktail, @dose] do |f| %>
+<%= f.input :description %>
+<%= f.input :ingredient_id, collection: Ingredient.all %>
 <%= f.submit %>
 <% end %>
