--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,8 @@
 
 <body>
   <%= render 'shared/navbar' %>
-  <%= yield %>
+  <div class="container-all">
+    <%= yield %>
+  </div>
 </body>
 </html>
