--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,5 +1,9 @@
-
-<%= simple_form_for @cocktail do |f| %>
-<%= f.input :name %>
-<%= f.submit %>
-<% end %>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-sm-6 col-sm-offset-3">
+      <h1>New Cocktail</h1>
+      <%= render 'form' %>
+      <%= link_to 'Back', cocktails_path %>
+    </div>
+  </div>
+</div>
