--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,11 +1,19 @@
 
-<div class="cocktails-card">
-  <h1>Cocktails</h1>
-
-  <%= link_to "Add a Cocktail", new_cocktail_path %>
-
-
-  <% @cocktails.each do |cocktail| %>
-  <h4><%= cocktail.name %> <%= link_to "open", cocktail_path(cocktail) %> </h4>
-  <% end %>
+<div class="container">
+  <div class="container-cocktail">
+    <div class="row row-mod">
+      <div class="col-xs-8 col-xs-offset-2">
+        <div class="cocktails-wrapper text-center">
+          <h1>Cocktails</h1>
+          <%= link_to "Add a Cocktail", new_cocktail_path %>
+          <% @cocktails.each do |cocktail| %>
+          <div class="cocktail-index-card">
+            <h4><%= cocktail.name %> <%= link_to "open", cocktail_path(cocktail) %></h4>
+            <%= cl_image_tag(cocktail.photo, height: 200, width: 200, crop: :fill, class: "show-pic")%>
+          </div>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
