--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,13 +1,22 @@
+<div class="cocktail-back" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= cl_image_path @cocktail.photo, height: 300, width: 400, crop: :fill %>'); background-size: cover">
 
-<div class="cocktails-card">
-  <h2><%= @cocktail.name  %></h2>
-  <%= link_to "Back", cocktails_path %>
-
-  <% @cocktail.doses.each do |dose| %>
-  <h4><%= dose.ingredient ? dose.ingredient.name : "No ingredients" %>: <%= dose.ingredient ? dose.description : "" %> <%= link_to "delete", cocktail_dose_path(@cocktail, dose), method: :delete %> </h4>
-  <% end %>
-
-
-  <%= link_to "Add ingredient", new_cocktail_dose_path(@cocktail), {class: "link-btn"} %>
-  <%= link_to "Delete", cocktail_path, method: :delete %>
+  <div class="container">
+    <div class="container-cocktail">
+    <div class="row row-mod">
+      <div class="col-xs-8 col-xs-offset-2">
+        <div class="cocktails-wrapper text-center">
+         <div class="cocktails-card">
+          <h2><%= @cocktail.name  %></h2>
+          <%= link_to "Back", cocktails_path, class: "back-btn" %>
+          <% @cocktail.doses.each do |dose| %>
+          <h4><%= dose.ingredient ? dose.ingredient.name : "No ingredients" %>: <%= dose.ingredient ? dose.description : "" %> <%= link_to "delete", cocktail_dose_path(@cocktail, dose), method: :delete, class: "delete-btn" %> </h4>
+          <% end %>
+          <%= link_to "Add ingredient", new_cocktail_dose_path(@cocktail), {class: "link-btn"} %>
+          <%= link_to "Delete", cocktail_path, method: :delete, class: "delete-cocktail" %>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 </div>
