--- a/app/views/cocktails/_form.html.erb
+++ b/app/views/cocktails/_form.html.erb
@@ -7,6 +7,10 @@
     <div class="links">
       <%= link_to_add_association 'add dose', f, :doses %>
     </div>
+     <div class="add-photo">
+      <%= f.input :photo %>
+      <%= f.input :photo_cache, as: :hidden %>
+    </div>
   </div>
   <%= f.button :submit, class: "btn btn-primary"  %>
 <% end %>
