--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,4 +1,4 @@
-<div class="cocktail-back" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= cl_image_path @cocktail.photo, height: 300, width: 400, crop: :fill %>'); background-size: cover">
+<div class="cocktail-back" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= cl_image_path(@cocktail.photo, height: 300, width: 400, crop: :fill) %>'); background-size: cover">
 
   <div class="container">
     <div class="container-cocktail">
