--- a/app/views/cocktails/_form.html.erb
+++ b/app/views/cocktails/_form.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for(@cocktail) do |f| %>
-  <%= f.input :name, placeholder: "Mojito" %>
+  <%= f.input :name, placeholder: "Mojito", :input_html => { class: "input-style" } %>
   <div id="doses">
     <%= f.simple_fields_for :doses do |f| %>
       <%= render 'dose_fields', f: f %>
@@ -8,9 +8,9 @@
       <%= link_to_add_association 'add dose', f, :doses %>
     </div>
      <div class="add-photo">
-      <%= f.input :photo %>
+      <%= f.input :photo%>
       <%= f.input :photo_cache, as: :hidden %>
     </div>
   </div>
-  <%= f.button :submit, class: "btn btn-primary"  %>
+  <%= f.button :submit, class: "btn btn-primary add-cocktail-btn"  %>
 <% end %>
