--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,9 +1,13 @@
 <div class="container">
-  <div class="row">
+  <div class="row row-mod new-cocktail-row">
     <div class="col-xs-12 col-sm-6 col-sm-offset-3">
-      <h1>New Cocktail</h1>
-      <%= render 'form' %>
-      <%= link_to 'Back', cocktails_path %>
+      <div class="cocktails-wrapper text-center">
+        <div class="index-txt text-center">
+          <h1>New Cocktail</h1>
+          <%= render 'form' %>
+          <%= link_to 'Back', cocktails_path %>
+        </div>
+      </div>
     </div>
   </div>
 </div>
