--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -6,6 +6,7 @@
         <div class="index-txt text-center">
           <h1>Cocktails</h1>
           <%= link_to "Add a Cocktail", new_cocktail_path, class: "add-cocktail-btn" %>
+          <%= link_to "Add a random cocktail", random_cocktails_path, class: "add-cocktail-btn" %>
         </div>
         <% @cocktails.each do |cocktail| %>
         <div class="cocktail-index-card col-md-6">
