--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar-wagon">
+<div class="navbar-wagon cocktail-navbar navbar-fixed-top">
   <!-- Logo -->
   <%= link_to root_path, class: "navbar-wagon-brand" do %>
 
@@ -12,7 +12,7 @@
     <% @cocktail = Cocktail.order("RANDOM()").first  %>
 
     <!-- Links -->
-    <%= link_to "Home", cocktails_path, class: "navbar-wagon-item navbar-wagon-link" %>
+    <%= link_to "All cocktails", cocktails_path, class: "navbar-wagon-item navbar-wagon-link" %>
     <%= link_to "New", new_cocktail_path, class: "navbar-wagon-item navbar-wagon-link" %>
     <%= link_to "Random cocktail", cocktail_path(@cocktail), class: "navbar-wagon-item navbar-wagon-link" %>
 
@@ -41,7 +41,7 @@
     <div class="dropdown">
       <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-        <li><%= link_to "Home", cocktails_path %></li>
+        <li><%= link_to "All cocktails", cocktails_path %></li>
         <li><%= link_to "New", new_cocktail_path %></li>
         <li><%= link_to "Random cocktail", cocktail_path(@cocktail) %></li>
       </ul>
