--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,7 +2,7 @@
   <!-- Logo -->
   <%= link_to root_path, class: "navbar-wagon-brand" do %>
 
-  <i id="icon" class="fa fa-glass" style="text-shadow: rgb(179, 88, 88) 0px 0px 0px, rgb(187, 92, 92) 1px 1px 0px, rgb(195, 96, 96) 2px 2px 0px, rgb(204, 100, 100) 3px 3px 0px, rgb(212, 104, 104) 4px 4px 0px, rgb(221, 108, 108) 5px 5px 0px, rgb(230, 113, 113) 6px 6px 0px, rgb(238, 117, 117) 7px 7px 0px, rgb(247, 121, 121) 8px 8px 0px; font-size: 34px; color: rgb(255, 255, 255); height: 56px; width: 56px; line-height: 56px; border-radius: 19%; text-align: center; background-color: rgb(255, 125, 125);"></i>
+  <i id="icon" class="fa fa-glass cocktail-icon" style="text-shadow: rgb(179, 88, 88) 0px 0px 0px, rgb(187, 92, 92) 1px 1px 0px, rgb(195, 96, 96) 2px 2px 0px, rgb(204, 100, 100) 3px 3px 0px, rgb(212, 104, 104) 4px 4px 0px, rgb(221, 108, 108) 5px 5px 0px, rgb(230, 113, 113) 6px 6px 0px, rgb(238, 117, 117) 7px 7px 0px, rgb(247, 121, 121) 8px 8px 0px; font-size: 34px; color: rgb(255, 255, 255); height: 56px; width: 56px; line-height: 56px; border-radius: 19%; text-align: center; background-color: rgb(255, 125, 125);"></i>
   <% end %>
 
   <!-- Right Navigation -->
